<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nilton.proyecto_movil_2017.ConsultasActivosActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="94dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/var_cod_activo" />

                        <EditText
                            android:id="@+id/edtCodigoActivo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <Button
                            android:id="@+id/btnBuscarActivo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/var_buscar" />

                        <Button
                            android:id="@+id/btnGuardarActivo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/var_actualizar"
                            tools:ignore="DuplicateIds" />

                        <Button
                            android:id="@+id/btnScanner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/var_camara" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var_tipos" />

                <Spinner
                    android:id="@+id/spnTipoActivo"
                    android:layout_width="174dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/var_tipos" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var_fecha" />

                <EditText
                    android:id="@+id/edtFechaCompra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var_serie" />

                <EditText
                    android:id="@+id/edtSerie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var_placa" />

                <EditText
                    android:id="@+id/edtPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var_estado" />

                <Spinner
                    android:id="@+id/spnEstadoActivo"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/var_estado" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var_codbarra" />

                <EditText
                    android:id="@+id/edtCodigoBarra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var_cod_marca" />

                <Spinner
                    android:id="@+id/spnMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var_cod_resp" />

                <Spinner
                    android:id="@+id/spnResponsable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/var_cod_prov" />

                <Spinner
                    android:id="@+id/spnProveedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/var_guardar" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
